css/main.css
* {
    font-family: "Avenir Next", Calibri, sans-serif;
}

form#visualizationType {
    float: right;
    color: white;
}

input[type="radio"] {
    margin-right: 5px;
}

.leftSplit { 
    width: 50%;
    float: left;
}

.rightSplit { 
    width: 50%;
    float: right;
    padding-right: 5px;
}

.rightSplit label {
  margin-right: .5rem;
}

.rightSplit label input { 
  margin-right: .5rem;
}

/* STYLE THE SPIRALGRAM */

.spiralComponent#masterSVG { 
  width: 65%;
  height: 0;
  padding-bottom: 65%;
  display: inline-block;
}

.spiralComponent#staff { 
  width: 35%;
  height: 0;
  padding-bottom: 65%;
  display: inline-block;
}

/* STYLE THE GLYPHPLOT */

g.legend .star-label {
    font-size: 11px; 
    fill: white ;
}

g.legend .star-axis { 
    stroke: #ccc;
    stroke-width: 2px;
    stroke-dasharray: 10000 0;
}

g.legend .star-origin { 
    fill: white;
}

.star-label { 
    font-size: 0px;
}

.star-axis .star-axis { 
    stroke-width: 0px;
}

svg.starplot { 
    background-color: #22262d;
    margin: 10px;
    display: inline-block;
    border: 2px solid white;
}

.star-path, .spoke { 
    stroke: white;
    stroke-width: 1.5px; 
}

.star-path { 
    fill: white;
    fill-opacity: 0;
}

#uploadInput { 
	display: none;
}

#visualizer { 
    border: 0px solid white;
    border-top-width: 4px;
    padding: 20px;
    background: #191a1b !important;
}

#visualizer > div { 

    background: #22262d;

    border: 0px solid white;
    border-left-width: 0px;
    border-radius: 3px;

}

span#masterText { 
    display: block;
    height: 40px;
    font-size: 15px !important;
}

span#sortInfo { 
    font-size: 10px;
    padding-left: 0px !important;
    font-style: italic;
}

span#overview { 

    font-size: 20px;
    
}

#textContainer span {
    display: block;
    color: white;
    padding-left: 20px;
    font-size: 30px;
}

#graphics span { 
    display: block;
    color: white;
        padding-left: 5px;

}

#graphics {
    padding-top: 10px;
    margin-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
}

#masterSVG { 
	background: #22262d;
    width: 100%;
    height: 400px;
    display: block;
/*    height: 200px;
*/}

#detailSVG { 
    margin-top: 20px;
/*    border: 2px solid white;
*/    height: 600px;
}

path:not(.domain) {
    stroke: white;
}

g.tick line { 
    stroke-width: 2;
    opacity: 1;
    stroke: white;
}

g.tick text { 
    fill: white;
}

g.tick line.selectedForRadar ~ circle { 
  fill: orange;
}

g.xAxis path.domain { 

    stroke: white;
}


g.tick text:hover { 

}

/*SPINNER*/
#spinnerContainer { 

	display: none;
}

.lds-ellipsis { 
	margin: 0 auto;
}

@keyframes lds-ellipsis3 {
  0%, 25% {
    left: 32px;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  50% {
    left: 32px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  75% {
    left: 100px;
  }
  100% {
    left: 168px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}
@-webkit-keyframes lds-ellipsis3 {
  0%, 25% {
    left: 32px;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  50% {
    left: 32px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  75% {
    left: 100px;
  }
  100% {
    left: 168px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}
@keyframes lds-ellipsis2 {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  25%, 100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}
@-webkit-keyframes lds-ellipsis2 {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  25%, 100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}
@keyframes lds-ellipsis {
  0% {
    left: 32px;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  25% {
    left: 32px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  50% {
    left: 100px;
  }
  75% {
    left: 168px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  100% {
    left: 168px;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}
@-webkit-keyframes lds-ellipsis {
  0% {
    left: 32px;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
  25% {
    left: 32px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  50% {
    left: 100px;
  }
  75% {
    left: 168px;
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  100% {
    left: 168px;
    -webkit-transform: scale(0);
    transform: scale(0);
  }
}
.lds-ellipsis {
  position: relative;
}
.lds-ellipsis > div {
  position: absolute;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 40px;
  height: 40px;
}
.lds-ellipsis div > div {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: #f00;
  position: absolute;
  top: 100px;
  left: 32px;
  -webkit-animation: lds-ellipsis 3s cubic-bezier(0, 0.5, 0.5, 1) infinite forwards;
  animation: lds-ellipsis 3s cubic-bezier(0, 0.5, 0.5, 1) infinite forwards;
}
.lds-ellipsis div:nth-child(1) div {
  -webkit-animation: lds-ellipsis2 3s cubic-bezier(0, 0.5, 0.5, 1) infinite forwards;
  animation: lds-ellipsis2 3s cubic-bezier(0, 0.5, 0.5, 1) infinite forwards;
  background: #f05f40;
}
.lds-ellipsis div:nth-child(2) div {
  -webkit-animation-delay: -1.5s;
  animation-delay: -1.5s;
  background: #f05f40;
}
.lds-ellipsis div:nth-child(3) div {
  -webkit-animation-delay: -0.75s;
  animation-delay: -0.75s;
  background: #f05f40;
}
.lds-ellipsis div:nth-child(4) div {
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  background: #f05f40;
}
.lds-ellipsis div:nth-child(5) div {
  -webkit-animation: lds-ellipsis3 3s cubic-bezier(0, 0.5, 0.5, 1) infinite forwards;
  animation: lds-ellipsis3 3s cubic-bezier(0, 0.5, 0.5, 1) infinite forwards;
  background: #f05f40;
}
.lds-ellipsis {
  width: 200px !important;
  height: 200px !important;
  -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
  transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
}

